# solrify

./: .gitignore  Makefile  README.md  description.txt  pyproject.toml
solrify/: __init__.py  client.py  config.py  custom_types.py  definitions.py  query.py
tests/: test_mapping_enum.py  test_query_build.py
